--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.daimajia.slider:library:1.1.5@aar'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
