--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme" />
         <activity android:name=".activity.BaseActivityWithoutDrawer" />
-        <activity android:name=".activity.CategoryActivity"></activity>
+        <activity android:name=".activity.CategoryActivity" />
+        <activity android:name=".activity.CategoryListViewActivity"></activity>
     </application>
 
 </manifest>
