--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,11 @@
         </activity>
         <activity android:name=".activity.ContactUsActivity" >
         </activity>
+        <activity
+            android:name=".activity.WishListActivity"
+            android:label="@string/title_activity_wish_list"
+            android:theme="@style/AppTheme" >
+        </activity>
     </application>
 
 </manifest>
