--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:name=".activity.LoginActivity"
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".activity.BaseActivityWithoutDrawer" />
         <activity android:name=".activity.CategoryActivity" />
         <activity android:name=".activity.CategoryListViewActivity" />
@@ -49,6 +49,8 @@
             android:name=".activity.WishListActivity"
             android:label="@string/title_activity_wish_list"
             android:theme="@style/AppTheme" >
+        </activity>
+        <activity android:name=".activity.ShowRelatedProduct" >
         </activity>
     </application>
 
