login by accesstoken create new data model update shopping cart data model

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,8 @@
         </activity>
         <activity android:name="com.themallbd.workspaceit.activity.SearchProductListActivity" >
         </activity>
+        <activity android:name="com.themallbd.workspaceit.activity.NoInternetActiviy" >
+        </activity>
     </application>
 
 </manifest>
