add specail product and package product at home page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,8 @@
         </activity>
         <activity android:name="com.themallbd.workspaceit.activity.NoInternetActiviy" >
         </activity>
+        <activity android:name="com.themallbd.workspaceit.activity.PackageDetailsActivity" >
+        </activity>
     </application>
 
 </manifest>
