show all pages new,feature product, Progressbar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,10 @@
         </activity>
         <activity android:name="com.themallbd.workspaceit.activity.PackageDetailsActivity" >
         </activity>
+        <activity android:name="com.themallbd.workspaceit.activity.AllNewProductActivity" >
+        </activity>
+        <activity android:name="com.themallbd.workspaceit.activity.AllFeaturesProductActivity" >
+        </activity>
     </application>
 
 </manifest>
