categaory clickable all level dynamic, checkout layout design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,10 @@
         </activity>
         <activity android:name="com.themallbd.workspaceit.activity.AllFeaturesProductActivity" >
         </activity>
+        <activity android:name="com.themallbd.workspaceit.activity.AllPacakgeActivity" >
+        </activity>
+        <activity android:name="com.themallbd.workspaceit.activity.AllDiscountProductActivity" >
+        </activity>
     </application>
 
 </manifest>
