--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile files('libs/gson-2.3.jar')
     compile 'com.android.support:appcompat-v7:23.2.0'
@@ -38,4 +38,6 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.android.support:support-v4:23.2.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile files('libs/PayPal_MPL.jar')
+    compile('com.paypal.sdk:paypal-android-sdk:2.14.4')
 }
