--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <!-- if you want to load images from a file OR from the internet -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -74,6 +75,15 @@
         <activity android:name="com.themallbd.workspaceit.activity.PrevoiusOrderActivity" >
         </activity>
         <activity android:name="com.themallbd.workspaceit.activity.OrderHistoryDetailsPage" >
+        </activity>
+        <activity
+            android:name="com.themallbd.workspaceit.activity.WalletMixPaymentWebViewActivity"
+            android:label="@string/title_activity_wallet_mix_payment_web_view"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity android:name="com.themallbd.workspaceit.activity." >
+        </activity>
+        <activity android:name="com.themallbd.workspaceit.activity.PaypalPaymentActivity" >
         </activity>
     </application>
 
