--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.workspaceit.themall"
         minSdkVersion 17
         targetSdkVersion 23
-        versionCode 5
+        versionCode 6
         versionName "1.0"
     }
     buildTypes {
@@ -38,6 +38,5 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.android.support:support-v4:23.2.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    compile files('libs/PayPal_MPL.jar')
-    compile('com.paypal.sdk:paypal-android-sdk:2.14.4')
+    compile 'com.paypal.sdk:paypal-android-sdk:2.14.4'
 }
