--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,13 +30,15 @@
         <activity
             android:name="com.themallbd.workspaceit.activity.ProductDetailsActivity"
             android:label="@string/app_name" />
-        <activity android:name="com.themallbd.workspaceit.activity.BaseActivity" />
+        <activity android:name="com.themallbd.workspaceit.activity.BaseActivity"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name="com.themallbd.workspaceit.activity.LoginActivity"
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name="com.themallbd.workspaceit.activity.BaseActivityWithoutDrawer" />
+        <activity android:name="com.themallbd.workspaceit.activity.BaseActivityWithoutDrawer"
+            android:theme="@style/AppTheme"/>
         <activity android:name="com.themallbd.workspaceit.activity.CategoryActivity" />
         <activity android:name="com.themallbd.workspaceit.activity.CategoryListViewActivity" />
         <activity android:name="com.themallbd.workspaceit.activity.CategoryInExpandableListViewActivity" />
@@ -81,8 +83,7 @@
             android:label="@string/title_activity_wallet_mix_payment_web_view"
             android:theme="@style/AppTheme" >
         </activity>
-        <activity android:name="com.themallbd.workspaceit.activity." >
-        </activity>
+
         <activity android:name="com.themallbd.workspaceit.activity.PaypalPaymentActivity" >
         </activity>
         <activity android:name="com.themallbd.workspaceit.activity.BKashPaymentActivity" >
