--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,15 +30,17 @@
         <activity
             android:name="com.themallbd.workspaceit.activity.ProductDetailsActivity"
             android:label="@string/app_name" />
-        <activity android:name="com.themallbd.workspaceit.activity.BaseActivity"
-            android:theme="@style/AppTheme"/>
+        <activity
+            android:name="com.themallbd.workspaceit.activity.BaseActivity"
+            android:theme="@style/AppTheme" />
         <activity
             android:name="com.themallbd.workspaceit.activity.LoginActivity"
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name="com.themallbd.workspaceit.activity.BaseActivityWithoutDrawer"
-            android:theme="@style/AppTheme"/>
+        <activity
+            android:name="com.themallbd.workspaceit.activity.BaseActivityWithoutDrawer"
+            android:theme="@style/AppTheme" />
         <activity android:name="com.themallbd.workspaceit.activity.CategoryActivity" />
         <activity android:name="com.themallbd.workspaceit.activity.CategoryListViewActivity" />
         <activity android:name="com.themallbd.workspaceit.activity.CategoryInExpandableListViewActivity" />
@@ -83,10 +85,13 @@
             android:label="@string/title_activity_wallet_mix_payment_web_view"
             android:theme="@style/AppTheme" >
         </activity>
-
         <activity android:name="com.themallbd.workspaceit.activity.PaypalPaymentActivity" >
         </activity>
         <activity android:name="com.themallbd.workspaceit.activity.BKashPaymentActivity" >
+        </activity>
+        <activity android:name="com.themallbd.workspaceit.activity.ManufracturerActivity" >
+        </activity>
+        <activity android:name="com.themallbd.workspaceit.activity.ProductByManufracturerActivity" >
         </activity>
     </application>
 
