--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.workspaceit.themall" >
+    package="com.workspaceit.themall">
 
     <!-- if you want to load images from the internet -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -19,14 +19,13 @@
         android:icon="@drawable/main_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name="com.themallbd.workspaceit.activity.MainActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name="com.themallbd.workspaceit.activity.ProductDetailsActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" />
         <activity
             android:name="com.themallbd.workspaceit.activity.BaseActivity"
@@ -58,74 +57,55 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name="com.themallbd.workspaceit.activity.MyAccountActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize" >
-        </activity>
-        <activity android:name="com.themallbd.workspaceit.activity.ContactUsActivity" >
-        </activity>
+            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize"></activity>
+        <activity android:name="com.themallbd.workspaceit.activity.ContactUsActivity"></activity>
         <activity
             android:name="com.themallbd.workspaceit.activity.WishListActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize"
             android:label="@string/title_activity_wish_list"
-            android:theme="@style/AppTheme" >
-        </activity>
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name="com.themallbd.workspaceit.activity.ShowRelatedProduct"
-            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize" >
-        </activity>
+            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize"></activity>
         <activity
             android:name="com.themallbd.workspaceit.activity.ShowAllReviewActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize" >
-        </activity>
+            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize"></activity>
         <activity
             android:name="com.themallbd.workspaceit.activity.SearchProductListActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize" >
-        </activity>
-        <activity android:name="com.themallbd.workspaceit.activity.NoInternetActiviy" >
-        </activity>
+            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize"></activity>
+        <activity android:name="com.themallbd.workspaceit.activity.NoInternetActiviy"></activity>
         <activity
             android:name="com.themallbd.workspaceit.activity.PackageDetailsActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize" >
-        </activity>
+            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize"></activity>
         <activity
             android:name="com.themallbd.workspaceit.activity.AllNewProductActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize" >
-        </activity>
+            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize"></activity>
         <activity
             android:name="com.themallbd.workspaceit.activity.AllFeaturesProductActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize" >
-        </activity>
+            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize"></activity>
         <activity
             android:name="com.themallbd.workspaceit.activity.AllPacakgeActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize" >
-        </activity>
+            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize"></activity>
         <activity
             android:name="com.themallbd.workspaceit.activity.AllDiscountProductActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize" >
-        </activity>
+            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize"></activity>
         <activity
             android:name="com.themallbd.workspaceit.activity.PrevoiusOrderActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize" >
-        </activity>
+            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize"></activity>
         <activity
             android:name="com.themallbd.workspaceit.activity.OrderHistoryDetailsPage"
-            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize" >
-        </activity>
+            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize"></activity>
         <activity
             android:name="com.themallbd.workspaceit.activity.WalletMixPaymentWebViewActivity"
             android:label="@string/title_activity_wallet_mix_payment_web_view"
-            android:theme="@style/AppTheme" >
-        </activity>
-        <activity android:name="com.themallbd.workspaceit.activity.PaypalPaymentActivity" >
-        </activity>
-        <activity android:name="com.themallbd.workspaceit.activity.BKashPaymentActivity" >
-        </activity>
-        <activity android:name="com.themallbd.workspaceit.activity.ManufracturerActivity" >
-        </activity>
+            android:theme="@style/AppTheme"></activity>
+        <activity android:name="com.themallbd.workspaceit.activity.PaypalPaymentActivity"></activity>
+        <activity android:name="com.themallbd.workspaceit.activity.BKashPaymentActivity"></activity>
+        <activity android:name="com.themallbd.workspaceit.activity.ManufracturerActivity"></activity>
         <activity
             android:name="com.themallbd.workspaceit.activity.ProductByManufracturerActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize" >
-        </activity>
-        <activity android:name="com.themallbd.workspaceit.activity.WelcomeScreenActivity" >
+            android:configChanges="keyboardHidden|orientation|screenSize|uiMode|smallestScreenSize"></activity>
+        <activity android:name="com.themallbd.workspaceit.activity.WelcomeScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
