--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.paypal.sdk:paypal-android-sdk:2.14.4'
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
 }
